--- a/NEW-TARIFFS/index-ru.html
+++ b/NEW-TARIFFS/index-ru.html
@@ -761,7 +761,7 @@
 											<div>- Услуга «Мегасайт Профи»</div>
 											<div>- Интеграция до 5000 товаров с системами 1С, Мой склад и YML</div>
 
-											<div>- Доступ к 3 модулям интеграции*</div>
+											<div>- Включены все сервисы интеграции</div>
 											<div>- SSL-сертификат</div>
 										</div>
 									</div>
@@ -785,7 +785,7 @@
 											<div>- Услуга «Мегасайт Профи»</div>
 											<div>- Интеграция до 5000 товаров с системами 1С, Мой склад и YML</div>
 
-											<div>- Доступ к 3 модулям интеграции*</div>
+											<div>- Включены все сервисы интеграции</div>
 											<div>- SSL-сертификат</div>
 										</div>
 									</div>
@@ -810,7 +810,7 @@
 											<div>- Услуга «Мегасайт Профи»</div>
 											<div>- Интеграция до 5000 товаров с системами 1С, Мой склад и YML</div>
 
-											<div>- Доступ к 3 модулям интеграции*</div>
+											<div>- Включены все сервисы интеграции</div>
 											<div>- SSL-сертификат</div>
 										</div>
 									</div>
